# MastersProject

./: CMakeLists.txt
cmake/toolchain/: arm-none-eabi.cmake
cmake/util/: helpers.cmake
config/benchmark/: Config.hpp
config/nrf5/: nrfx_glue.h  nrfx_log.h  sdk_config.h
examples/: CMakeLists.txt
examples/blinky/em/src/: main.cpp
examples/blinky/nrf/src/: main.cpp
examples/rng/: CMakeLists.txt
examples/rng/em/: main.cpp
examples/rng/nrf/: main.c  main.cpp
examples/test/: CMakeLists.txt
examples/test/em/: main.cpp
examples/test/nrf/: main.c  main.cpp
include/: Config.hpp
include/benchmark/: Benchmark.hpp  Stopwatch.hpp
include/em/: Benchmark.hpp
include/nrf/: Benchmark.hpp
lib/em/: CMakeLists.txt
lib/em/config/em/: Config.hpp
lib/em/include/em/: Layout.hpp
lib/em/include/em/core/: Delay.hpp  RegisterHandle.hpp
lib/em/include/em/peripheral/: Manager.hpp
lib/em/include/em/peripheral/gpio/: Gpio.hpp
lib/em/include/em/peripheral/rng/: Rng.hpp
lib/em/src/em/: main.cpp
lib/em/src/em/core/: Delay.cpp
lib/em/src/em/detail/: system.cpp
lib/nrf5/: CMakeLists.txt
lib/nrf5/modules/nrfx/: nrfx.h
lib/util/NrfStopwatch/: CMakeLists.txt
lib/util/NrfStopwatch/include/: Stopwatch.hpp
lib/util/NrfStopwatch/src/: Stopwatch.cpp
lib/util/benchmark/: CMakeLists.txt
lib/util/benchmark/include/private/: Warmup.hpp
lib/util/benchmark/include/public/: Benchmark.hpp  PolymorphicStopwatch.hpp  StopwatchConcept.hpp
lib/util/benchmark/src/: Benchmark.cpp  PolymorphicStopwatch.cpp  Warmup.cpp
lib/util/segger-rtt/: CMakeLists.txt
src/: main.cpp
src/benchmark/: Benchmark.cpp  Stopwatch.cpp
startup/src/: system.cpp
